--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -21,6 +21,7 @@ h1 {
     display: inline-block;
     width: fit-content;
     position: relative;
+    font-family: 'Press Start 2P', cursive;
 }
 
 .title1 {
