--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #282c34;
+    padding: 0px;
 }
 
 .nav ul {
