--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
 body {
   font-family: "poppins", sans-serif;
   background-color: #6185f8;
+  overflow-x: hidden;
 }
+
+.main-content {
+  padding: 40px;
+  /* max-width: 1000px; */
+  margin: 0 auto;
+}
+
 
 .App {}
 
