--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   font-family: "poppins", sans-serif;
-  background: linear-gradient(to bottom, #87CEFA 30%, #A7C7E7 100%);
+  background: linear-gradient(to bottom, #A2C4E6 10%, #DDEAF6 90%);
   overflow-x: hidden;
 }
 
