--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,21 @@ body {
   font-family: "poppins", sans-serif;
   background: linear-gradient(to bottom, #A2C4E6 10%, #DDEAF6 90%);
   overflow-x: hidden;
+  margin: 0;
 }
 
 .main-content {
   padding: 40px;
-  /* max-width: 1000px; */
   margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
 }
 
 
-.App {}
+.App {
+  width: 100%;
+  overflow-x: hidden;
+}
 
 .App-logo {
   height: 40vmin;
